tests/lustre/typechecking/shouldFail/type-width-error.lus
const n = 11;
const w = 5;
const t = true;

node f(x : bool) returns (b1 : bool^n);
let
  b1 = false ^ n;
tel

node b(x : bool) returns (xb : bool^w);
let
  --%PROPERTY xb[1] = false;
  xb = f(x);
tel